# mlcpplib

./: CMakeLists.txt
include/ml/autograd/: base.hpp  grad_fn.hpp  value.hpp
include/ml/core/: error.hpp  shape.hpp  storage.hpp
include/ml/ops/: elementwise.hpp  matmul.hpp
include/ml/tensor/: tensor.hpp
include/tensor/: tensor.hpp
src/core/: shape.cpp
src/ml/tensor/: tensor.cpp
src/ops/: elementwise.cpp  matmul.cpp
src/tensor/: tensor.cpp
tests/: test_scalar_autograd.cpp  test_tensor.cpp
